--- a/README
+++ b/README
@@ -1,7 +1,11 @@
 c-list - Circular Double Linked List Implementation in Standard ISO-C11
 
+ABOUT:
+        The c-list project is a standalone implementation of an intrusive
+        double linked list in Standard ISO-C11.
+
 DETAILS:
-        https://github.com/c-util/c-list
+        https://github.com/c-util/c-list/wiki
 
 BUG REPORTS:
         https://github.com/c-util/c-list/issues
@@ -14,6 +18,30 @@ GITWEB:
         https://github.com/c-util/c-list
 
 LICENSE:
-        Dual-licensed under (see COPYING for details):
-          - Apache Software License 2.0 (LICENSE-APACHE)
-          - Lesser General Public License 2.0+ (LICENSE-LGPL)
+        Apache Software License 2.0
+        Lesser General Public License 2.0+
+        See LICENSE and AUTHORS for details.
+
+REQUIREMENTS:
+        The requirements for c-list are:
+
+            libc (e.g., glibc >= 2.16)
+
+        At build-time, the following software is required:
+
+            meson >= 0.41
+            pkg-config >= 0.29
+
+INSTALL:
+        The meson build-system is used for c-list. Contact upstream
+        documentation for detailed help. In most situations the following
+        commands are sufficient to build and install c-list from source:
+
+            $ mkdir build
+            $ cd build
+            $ meson setup . ..
+            $ ninja
+            $ ninja test
+            # ninja install
+
+        No custom configuration options are available.
