build: update docs
Update some of the documentation and build instructions. Mainly minor
rewordings and fixes.

Signed-off-by: David Herrmann <dh.herrmann@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -30,8 +30,9 @@ LICENSE-LGPL
         along with this program; If not, see <http://www.gnu.org/licenses/>.
 
 COPYRIGHT: (ordered alphabetically)
-        Copyright (C) 2015-2017 Red Hat, Inc.
+        Copyright (C) 2015-2018 Red Hat, Inc.
 
 AUTHORS: (ordered alphabetically)
         David Herrmann <dh.herrmann@gmail.com>
+        Thomas Haller <thaller@redhat.com>
         Tom Gundersen <teg@jklm.no>
