--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-c-list - Circular Double Linked List Implementation in Standard ISO-C11
+c-list - Circular Intrusive Double Linked List Collection in ISO-C11
 
 CHANGES WITH 3:
 
