c-list: add c_list_split()
Add a new function c_list_split(), splitting an existing list in two.
It reverse c_list_splice().

Original-by: Michele Dionisio
(rework to allow empty lists to be split and simplify the tests)
Signed-off-by: David Rheinsberg <david.rheinsberg@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -36,5 +36,6 @@ AUTHORS: (ordered alphabetically)
         Danilo Horta <danilo.horta@pm.me>
         David Rheinsberg <david.rheinsberg@gmail.com>
         Lucas De Marchi <lucas.de.marchi@gmail.com>
+        Michele Dionisio
         Thomas Haller <thaller@redhat.com>
         Tom Gundersen <teg@jklm.no>
